--- a/README.in
+++ b/README.in
@@ -11,4 +11,4 @@ DownloaderX is a GUI-based tool for downloading files from the internet with opt
 
 
 
-Download app link: https://drive.google.com/file/d/1eJdQPlSf0UJrFYw3KNKkkqYZlW8ftt3j/view?usp=drive_link
+Download app link: https://drive.google.com/file/d/1eJdQPlSf0UJrFYw3KNKkkqYZlW8ftt3j/view?usp=sharing
